--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "axios": "^1.3.4",
     "roboto-fontface": "*",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
