--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vue3-datepicker": "^0.3.4",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
