--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^1.3.4",
     "moment": "^2.29.4",
+    "qrcode.vue": "^3.4.0",
     "roboto-fontface": "*",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
